--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* Reset default styles */
-
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 
 * {
@@ -8,7 +6,6 @@
   box-sizing: border-box;
 }
 
-/* Global styles */
 body {
   background-color: #191919;
 }
@@ -17,7 +14,7 @@ header {
   font-family: "Raleway", sans-serif;
   width: 100%;
   z-index: 4;
-  background-color: #191919;
+  background-color: rgb(25, 25, 25, 0.8);
   position: sticky; /* Add sticky positioning */
   top: 0;
 }
@@ -35,7 +32,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 20px; /* Adjust margin as needed */
+  margin: 0 15px;
   z-index: 3;
 }
 
@@ -67,20 +64,6 @@ nav ul li a:hover {
   color: #f8cc8c;
 }
 
-/* button {
-  padding: 10px 20px;
-  background-color: transparent;
-  color: white;
-  border: 1px solid #f8cc8c;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #f8cc8c;
-  color: black;
-} */
-
 .hover-underline-animation {
   display: inline-block;
   position: relative;
@@ -106,54 +89,6 @@ button:hover {
   transform-origin: bottom left;
 }
 
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  background-color: #000;
-}
-
-.hero::before {
-  content: "";
-  background-image: url("nathon-oski-EW_rqoSdDes-unsplash.png");
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0.3;
-}
-
-.hero1 {
-  background-color: #f8cc8c;
-}
-
-/* .hero1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  background-color: #000;
-}
-
-.hero1::before {
-  content: "";
-  background-image: url("hair.jpg");
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0.3;
-} */
-
 h1 {
   position: relative;
   color: #f8cc8c;
@@ -172,7 +107,7 @@ p {
   font-family: "Raleway", sans-serif;
 }
 
-hr {
+.hr {
   width: 10%;
   border: none;
   margin: 10px auto;
@@ -182,15 +117,11 @@ hr {
 }
 
 .history {
-  margin: 40px 350px;
+  margin: 10px 350px;
   font-size: 17px;
   line-height: 1.7;
   font-weight: lighter;
   font-family: "Raleway", sans-serif;
-}
-
-iframe {
-  padding: 50px;
 }
 
 .hero-text {
@@ -276,6 +207,7 @@ iframe {
   font-size: 1.5rem;
   color: #191919;
 }
+
 .contact-info {
   display: flex;
   flex-direction: column;
@@ -283,6 +215,10 @@ iframe {
   font-size: 1rem;
   font-family: "Raleway", sans-serif;
   color: #191919;
+}
+
+.hero1 {
+  background-color: #f8cc8c;
 }
 
 .icons {
@@ -358,6 +294,10 @@ footer {
 
 .copyright {
   font-size: 10px;
+}
+
+iframe {
+  padding: 50px;
 }
 
 .contact_form {
@@ -535,7 +475,7 @@ img {
   grid-row: span 2;
 }
 
-.landing_page {
+#landing_page {
   max-width: 1500px;
   margin: 0 auto; /* Center the element horizontally */
 }
