--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,14 @@ nav ul li a:hover {
 .navi-list {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 35%;
   margin: 0 auto;
-  max-width: 500px;
+  max-width: 600px;
 }
 
 .navi-list li:not(.centered-logo) {
-  flex: 1 0 auto;
+  flex: 1;
   text-align: center;
 }
 
@@ -479,6 +479,7 @@ img {
 #landing_page {
   max-width: 1500px;
   margin: 0 auto;
+  padding: 0;
 }
 
 .carousel_inner {
@@ -534,8 +535,6 @@ img {
   padding: 3rem 2.5rem;
   text-align: center;
   color: #fff;
-
-  width: 100%;
   background-color: rgb(0, 0, 0, 0.4);
 }
 
