--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 
+:root {
+  --background: #191919;
+  --black: #212529;
+  --yellow: #f8cc8c;
+  --white: #ddd;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,26 +14,11 @@
 }
 
 body {
-  background-color: #191919;
+  background-color: var(--background);
+  font-family: "Raleway", sans-serif;
 }
 
-ul,
-li {
-  list-style-type: none;
-}
-
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s ease;
-}
-
-nav ul li a:hover {
-  color: #f8cc8c;
-}
-
-.navi-list {
+.nav_list {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,7 +27,7 @@ nav ul li a:hover {
   max-width: 600px;
 }
 
-.navi-list li:not(.centered-logo) {
+.nav_list li:not(.centered_logo) {
   flex: 1;
   text-align: center;
 }
@@ -49,78 +41,122 @@ nav ul li a:hover {
   width: 50px;
 }
 
-header {
-  font-family: "Raleway", sans-serif;
+.navbar {
+  position: fixed;
   width: 100%;
   z-index: 4;
   background-color: rgb(25, 25, 25, 0.8);
-  position: sticky;
   top: 0;
 }
 
+ul,
+li {
+  list-style-type: none;
+}
+
 nav ul li a {
-  color: #fff;
+  color: var(--white);
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
-  color: #f8cc8c;
+  color: var(--yellow);
 }
 
-.hover-underline-animation {
-  display: inline-block;
+#hero {
+  max-width: 1500px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.carousel {
+  padding-top: 80px;
+}
+
+.carousel_inner {
+  width: 100%;
+  overflow: hidden;
   position: relative;
-  color: #f8cc8c;
 }
 
-.hover-underline-animation:after {
+.carousel_inner::after {
   content: "";
-  position: absolute;
-  width: 50%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  background-color: #f8cc8c;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-  bottom: -9px;
+  display: block;
+  clear: both;
 }
 
-.hover-underline-animation:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-h1 {
+.carousel_item {
   position: relative;
-  color: #f8cc8c;
+  float: left;
+  display: none;
+  width: 100%;
+  margin-right: -100%;
+  background-color: var(--black);
+}
+
+.carousel_item__active,
+.carousel_item__pos_next {
+  display: block;
+}
+
+.carousel_item__pos_next {
+  left: 100%;
+}
+
+.carousel_item__next {
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel_img {
+  display: block;
+  width: 100%;
+  height: 400px;
+}
+
+.carousel_caption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 3rem 2.5rem;
+  text-align: center;
+  color: var(--white);
+  background-color: rgb(0, 0, 0, 0.4);
+}
+
+.carousel_subtitle {
+  position: relative;
+  color: var(--yellow);
   font-size: 1rem;
   text-align: center;
-  font-family: "Raleway", sans-serif;
 }
 
-p {
+.carousel_title {
   position: relative;
-  color: #ddd;
+  color: var(--white);
   font-size: 3.5rem;
   line-height: 1.5;
   text-align: center;
   font-weight: bold;
-  font-family: "Raleway", sans-serif;
 }
 
-.hr {
+.carousel_hr {
   width: 10%;
   border: none;
   margin: 10px auto;
-  background-color: #f8cc8c;
+  background-color: var(--yellow);
   height: 3px;
   position: relative;
 }
 
-.history {
+.carousel_history {
   margin: 10px 350px;
   font-size: 17px;
   line-height: 1.7;
@@ -128,20 +164,20 @@ p {
   font-family: "Raleway", sans-serif;
 }
 
-.pricing-section {
-  background-color: #191919;
+.pricing_section {
+  background-color: var(--background);
   padding: 100px 20px 0 20px;
 }
 
-#triangle-bottomleft {
+#triangle_bottomleft {
   width: 0;
   height: 0;
-  border-top: 300px solid #f8cc8c;
+  border-top: 300px solid var(--yellow);
   border-right: 300px solid transparent;
   position: absolute;
   z-index: 1;
 }
-.pricing-container {
+.pricing_container {
   display: flex;
   flex-direction: row;
   margin: 0 200px;
@@ -150,14 +186,14 @@ p {
   align-items: center;
 }
 
-.pricing-card-left {
-  background-color: #191919;
-  border: 2px solid #f8cc8c;
+.pricing_card_left {
+  background-color: var(--background);
+  border: 2px solid var(--yellow);
   height: 450px;
   width: 400px;
 }
 
-.pricing-card-left img {
+.pricing_card_left img {
   padding: 20px;
   height: 450px;
   width: 400px;
@@ -165,82 +201,27 @@ p {
   z-index: 2;
 }
 
-.pricing-card-right {
-  background-color: #212529;
+.pricing_card_right {
+  background-color: var(--black);
   height: 450px;
   width: 550px;
   padding: 25px 35px;
 }
 
-#contact {
-  padding-top: 30px;
-}
-
-.contact-container {
-  display: flex;
-  flex-direction: row;
-  margin: 0 200px;
-  justify-content: center;
-  align-items: center;
-}
-
-.contact-card-left {
-  height: 450px;
-}
-
-.contact-card-left img {
-  padding: 20px;
-  height: 450px;
-  width: 400px;
-  position: absolute;
-  z-index: 2;
-}
-
-.contact-card-right {
-  width: 550px;
-  padding: 25px 35px;
-}
-
-.contact-info-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 50px;
-  font-size: 1.5rem;
-  color: #191919;
-}
-
-.contact-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1rem;
-  font-family: "Raleway", sans-serif;
-  color: #191919;
-}
-
-.hero1 {
-  background-color: #f8cc8c;
-}
-
-.icons {
-  width: 35px;
-  height: 35px;
-  margin: 10px 20px;
-  position: absolute;
-  z-index: 3;
-}
-
-.services-prices {
+.services_prices {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 20px;
+  padding-top: 40px;
 }
 
-.prices {
+.title_prices {
+  position: relative;
+  color: var(--yellow);
   font-size: 2rem;
-  font-family: "Raleway", sans-serif;
+  line-height: 1.5;
+  text-align: center;
+  font-weight: bold;
 }
 
 .services {
@@ -253,23 +234,23 @@ p {
   color: white;
 }
 
-.hr-price {
+.hr_price {
   background-color: white;
   width: 100%;
   height: 0.5px;
 }
 
 #gallery {
-  background-color: #191919;
-  margin: 0 auto;
   padding-top: 100px;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1000px;
 }
 
-h2 {
-  font-size: 20px;
+.wrapper {
+  background-color: var(--background);
+  margin: 0 auto;
+  width: 100%;
+  padding: 10px;
+  max-width: 1000px;
+  border: 1px solid var(--yellow);
 }
 
 .image-gallery {
@@ -277,7 +258,7 @@ h2 {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
   justify-items: center;
-  border: 1px solid #f8cc8c;
+  border: 1px solid var(--yellow);
   padding: 20px;
 }
 
@@ -285,155 +266,6 @@ h2 {
   width: 100%;
   height: auto;
   border-radius: 4px;
-}
-
-footer {
-  background-color: #222;
-  padding: 20px;
-  color: #fff;
-  text-align: center;
-}
-
-.copyright {
-  font-size: 10px;
-}
-
-iframe {
-  padding: 50px;
-}
-
-.contact_form {
-  height: 80vh;
-  width: 100%;
-  font-family: "Raleway", sans-serif;
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #191919;
-}
-
-.container:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: url("glas.jpg") no-repeat center;
-  background-size: cover;
-  filter: blur(50px);
-  z-index: -1;
-}
-
-.contact-box {
-  max-width: 850px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: #191919;
-  box-shadow: 0px 0px 19px 5px rgba(248, 204, 140, 0.19);
-  animation: fadeInRight 1s ease-in-out;
-}
-
-@keyframes fadeInRight {
-  from {
-    opacity: 0;
-    transform: translateX(300px);
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.left {
-  background: url("img/glass.jpg") no-repeat center;
-  background-size: cover;
-  height: 100%;
-}
-
-.right {
-  padding: 25px 40px;
-}
-
-h2 {
-  position: relative;
-  padding: 0 0 10px;
-  margin-bottom: 10px;
-  color: white;
-  font-size: 1.5rem;
-  font-family: "Raleway", sans-serif;
-}
-
-h2:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: 5px;
-  transform: translateX(-50%);
-  height: 4px;
-  width: 50px;
-  border-radius: 2px;
-  background-color: #f8cc8c;
-}
-
-.field {
-  width: 100%;
-  border: 2px solid rgba(0, 0, 0, 0);
-  outline: none;
-  background-color: white;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  margin-bottom: 22px;
-  transition: 0.3s;
-  border-radius: 15px;
-  font-family: "Raleway", sans-serif;
-}
-
-.field:hover {
-  background-color: white;
-}
-
-textarea {
-  min-height: 150px;
-  font-family: "Raleway", sans-serif;
-}
-
-.btn {
-  width: 100%;
-  padding: 0.5rem 1rem;
-  background-color: #f8cc8c;
-  color: #191919;
-  font-size: 1rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 15px;
-  font-family: "Raleway", sans-serif;
-}
-
-.btn:hover {
-  background-color: white;
-}
-
-.field:focus {
-  border: 2px solid rgba(30, 85, 250, 0.47);
-  background-color: white;
-}
-
-.wrapper {
-  background-color: #191919;
-  padding: 10px;
-  border: 1px solid #f8cc8c;
 }
 
 img {
@@ -476,74 +308,170 @@ img {
   grid-row: span 2;
 }
 
-#landing_page {
-  max-width: 1500px;
-  margin: 0 auto;
-  padding: 0;
+/* contact form start */
+#contact {
+  padding-top: 100px;
 }
 
-.carousel_inner {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
-
-.carousel_inner::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.carousel_item {
-  position: relative;
-  float: left;
-  display: none;
-  width: 100%;
-  margin-right: -100%;
-  background-color: black;
-}
-
-.carousel_item__active,
-.carousel_item__pos_next {
-  display: block;
-}
-
-.carousel_item__pos_next {
-  left: 100%;
-}
-
-.carousel_item__next {
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
-}
-
-.carousel_img {
-  display: block;
-  width: 100%;
-  height: 400px;
-}
-
-.carousel_caption {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
+.contact_box {
+  max-width: 850px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   justify-content: center;
-  width: 100%;
-  height: 100%;
-  padding: 3rem 2.5rem;
+  align-items: center;
   text-align: center;
-  color: #fff;
-  background-color: rgb(0, 0, 0, 0.4);
+  background-color: var(--background);
+  box-shadow: 0px 0px 19px 5px rgba(248, 204, 140, 0.19);
+  animation: fadeInRight 1s ease-in-out;
 }
 
-.carousel_title {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
+.contact_form {
+  height: 80vh;
+  width: 100%;
+  font-family: "Raleway", sans-serif;
 }
 
-.carousel_description {
-  margin-top: 0.75rem;
-  line-height: 150%;
+.form_container {
+  display: flex;
+  flex-direction: row;
+  margin: 0 200px;
+  justify-content: center;
+  align-items: center;
 }
+
+.contact_box_left {
+  background: url("img/glass.jpg") no-repeat center;
+  background-size: cover;
+  height: 100%;
+}
+
+.contact_box_right {
+  padding: 25px 40px;
+}
+
+.field {
+  width: 100%;
+  border: 2px solid rgba(0, 0, 0, 0);
+  outline: none;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  margin-bottom: 22px;
+  transition: 0.3s;
+  border-radius: 15px;
+  font-family: "Raleway", sans-serif;
+}
+
+.field:hover {
+  background-color: white;
+}
+
+textarea {
+  min-height: 150px;
+  font-family: "Raleway", sans-serif;
+}
+
+.btn {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  background-color: var(--yellow);
+  color: #191919;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 15px;
+  font-family: "Raleway", sans-serif;
+}
+
+.btn:hover {
+  background-color: white;
+}
+
+.field:focus {
+  border: 2px solid rgba(30, 85, 250, 0.47);
+  background-color: white;
+}
+
+.contact_title {
+  position: relative;
+  padding: 0 0 10px;
+  margin-bottom: 10px;
+  color: white;
+  font-size: 1.5rem;
+  font-family: "Raleway", sans-serif;
+}
+/* contact form end */
+
+/* contact location start */
+.location_contact {
+  background-color: var(--yellow);
+}
+
+.contact_container {
+  display: flex;
+  flex-direction: row;
+  max-width: 1050px;
+  margin: 0 auto;
+}
+
+.contact_card_left {
+  width: 50%;
+}
+
+iframe {
+  padding: 95px;
+}
+
+.contact_card_right {
+  width: 50%;
+  transform: translate(84px, 103px);
+}
+
+.contact_info_container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.icons_box {
+  width: 20%;
+}
+
+.icons {
+  width: 35px;
+  height: 35px;
+  margin: 10px 20px;
+}
+
+.contact_info_box {
+  width: 80%;
+  align-items: center;
+  font-size: 1.5rem;
+  color: var(--background);
+}
+
+.contact_info_header {
+  font-size: 1.5rem;
+}
+
+.contact_info {
+  font-size: 1rem;
+}
+
+/* contact location end */
+
+/* footer start */
+footer {
+  background-color: var(--black);
+  padding: 20px;
+  color: var(--white);
+  text-align: center;
+}
+
+.copyright {
+  font-size: 10px;
+}
+
+/* footer end */
