--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,6 @@ nav ul li a:hover {
   display: none;
   width: 100%;
   margin-right: -100%;
-  background-color: var(--black);
 }
 
 .carousel_item__active,
@@ -128,7 +127,7 @@ nav ul li a:hover {
   padding: 3rem 2.5rem;
   text-align: center;
   color: var(--white);
-  background-color: rgb(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .carousel_subtitle {
@@ -417,16 +416,18 @@ textarea {
 }
 
 .contact_card_left {
-  width: 50%;
+  flex: 1;
 }
 
 iframe {
   padding: 95px;
+  border: none;
 }
 
 .contact_card_right {
-  width: 50%;
-  transform: translate(84px, 103px);
+  flex: 1;
+  margin-left: 20px;
+  padding: 103px 0;
 }
 
 .contact_info_container {
